Correctly show available paint blending modes for masks

The combo-box in KisPaintopBox was using the paint device color space,
but in case of masks, composition happens in Grayscale/Alpha while the
paint device is plain Alpha.

BUG:452172